compiler/ArduinoArabicCompiler/ArArduinoParser.py
# Generated from ArArduinoParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ArArduinoParser ( Parser ):

    grammarFileName = "ArArduinoParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\\u0645\\u062A\\u063A\\u064A\\u0631'", 
                     "<INVALID>", "<INVALID>", "'\\u0637\\u0627\\u0644\\u0645\\u0627'", 
                     "'\\u0635\\u062D'", "'\\u063A\\u0644\\u0637'", "<INVALID>", 
                     "<INVALID>", "'\\u0641\\u0627\\u0631\\u063A'", "<INVALID>", 
                     "'\\u0627\\u0631\\u062C\\u0639'", "'\\u0625\\u0639\\u062F\\u0627\\u062F'", 
                     "<INVALID>", "'\\u0645\\u0646\\u0637\\u0642\\u064A'", 
                     "'\\u0627\\u0642\\u0637\\u0639'", "<INVALID>", "'\\u0646\\u0641\\u0630'", 
                     "'\\u0627\\u0643\\u062A\\u0628'", "'='", "'+'", "'-'", 
                     "'*'", "'/'", "'++'", "'--'", "'+='", "'-='", "'%'", 
                     "'>='", "'<='", "'=='", "'!='", "'>'", "'<'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'{'", "'}'", 
                     "':'", "'\\u061B'", "'\\u060C'", "'|'", "'&'", "'^'", 
                     "'~'", "'\\u0646\\u0635'", "'\\u062D\\u0631\\u0641'" ]

    symbolicNames = [ "<INVALID>", "VAR", "IF", "ELSE", "WHILE", "TRUE", 
                      "FALSE", "INT_T", "FLOAT_T", "VOID", "FUNCTION", "RETURN", 
                      "SETUP", "LOOP", "BOOL", "BREAK", "CONTINUE", "DO", 
                      "PRINT", "ASSIGN", "PLUS", "MINUS", "MUL", "DIV", 
                      "INC", "DEC", "ADD_ASSIGN", "SUB_ASSIGN", "MOD", "GTE", 
                      "LTE", "EQ", "NEQ", "GT", "LT", "OR", "AND", "NOT", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "COLON", "SEMI", 
                      "COMA", "BW_OR", "BW_AND", "BW_XOR", "BW_NOT", "STRING_T", 
                      "CHAR_T", "STRING", "CHAR", "NUMBER", "ID", "WS", 
                      "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_varDecl = 2
    RULE_funDecl = 3
    RULE_funcBody = 4
    RULE_params = 5
    RULE_param = 6
    RULE_block = 7
    RULE_statement = 8
    RULE_idStatement = 9
    RULE_idSuffix = 10
    RULE_ifStat = 11
    RULE_whileStat = 12
    RULE_returnStat = 13
    RULE_args = 14
    RULE_expression = 15
    RULE_orExpr = 16
    RULE_andExpr = 17
    RULE_bwOrExpr = 18
    RULE_bwXorExpr = 19
    RULE_bwAndExpr = 20
    RULE_relExpr = 21
    RULE_relOp = 22
    RULE_addExpr = 23
    RULE_mulExpr = 24
    RULE_unaryExpr = 25
    RULE_primary = 26
    RULE_primaryIdSuffix = 27
    RULE_type = 28

    ruleNames =  [ "program", "declaration", "varDecl", "funDecl", "funcBody", 
                   "params", "param", "block", "statement", "idStatement", 
                   "idSuffix", "ifStat", "whileStat", "returnStat", "args", 
                   "expression", "orExpr", "andExpr", "bwOrExpr", "bwXorExpr", 
                   "bwAndExpr", "relExpr", "relOp", "addExpr", "mulExpr", 
                   "unaryExpr", "primary", "primaryIdSuffix", "type" ]

    EOF = Token.EOF
    VAR=1
    IF=2
    ELSE=3
    WHILE=4
    TRUE=5
    FALSE=6
    INT_T=7
    FLOAT_T=8
    VOID=9
    FUNCTION=10
    RETURN=11
    SETUP=12
    LOOP=13
    BOOL=14
    BREAK=15
    CONTINUE=16
    DO=17
    PRINT=18
    ASSIGN=19
    PLUS=20
    MINUS=21
    MUL=22
    DIV=23
    INC=24
    DEC=25
    ADD_ASSIGN=26
    SUB_ASSIGN=27
    MOD=28
    GTE=29
    LTE=30
    EQ=31
    NEQ=32
    GT=33
    LT=34
    OR=35
    AND=36
    NOT=37
    LPAREN=38
    RPAREN=39
    LBRACE=40
    RBRACE=41
    COLON=42
    SEMI=43
    COMA=44
    BW_OR=45
    BW_AND=46
    BW_XOR=47
    BW_NOT=48
    STRING_T=49
    CHAR_T=50
    STRING=51
    CHAR=52
    NUMBER=53
    ID=54
    WS=55
    LINE_COMMENT=56
    BLOCK_COMMENT=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ArArduinoParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArArduinoParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(ArArduinoParser.DeclarationContext,i)


        def getRuleIndex(self):
            return ArArduinoParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ArArduinoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1 or _la==10:
                self.state = 58
                self.declaration()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 64
            self.match(ArArduinoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(ArArduinoParser.VarDeclContext,0)


        def funDecl(self):
            return self.getTypedRuleContext(ArArduinoParser.FunDeclContext,0)


        def getRuleIndex(self):
            return ArArduinoParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = ArArduinoParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 68
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.varDecl()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.funDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(ArArduinoParser.VAR, 0)

        def ID(self):
            return self.getToken(ArArduinoParser.ID, 0)

        def COLON(self):
            return self.getToken(ArArduinoParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(ArArduinoParser.TypeContext,0)


        def ASSIGN(self):
            return self.getToken(ArArduinoParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(ArArduinoParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(ArArduinoParser.SEMI, 0)

        def getRuleIndex(self):
            return ArArduinoParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = ArArduinoParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(ArArduinoParser.VAR)
            self.state = 71
            self.match(ArArduinoParser.ID)
            self.state = 72
            self.match(ArArduinoParser.COLON)
            self.state = 73
            self.type_()
            self.state = 74
            self.match(ArArduinoParser.ASSIGN)
            self.state = 75
            self.expression()
            self.state = 76
            self.match(ArArduinoParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(ArArduinoParser.FUNCTION, 0)

        def funcBody(self):
            return self.getTypedRuleContext(ArArduinoParser.FuncBodyContext,0)


        def getRuleIndex(self):
            return ArArduinoParser.RULE_funDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunDecl" ):
                listener.enterFunDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunDecl" ):
                listener.exitFunDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunDecl" ):
                return visitor.visitFunDecl(self)
            else:
                return visitor.visitChildren(self)




    def funDecl(self):

        localctx = ArArduinoParser.FunDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(ArArduinoParser.FUNCTION)
            self.state = 79
            self.funcBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SETUP(self):
            return self.getToken(ArArduinoParser.SETUP, 0)

        def LPAREN(self):
            return self.getToken(ArArduinoParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ArArduinoParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(ArArduinoParser.COLON, 0)

        def VOID(self):
            return self.getToken(ArArduinoParser.VOID, 0)

        def block(self):
            return self.getTypedRuleContext(ArArduinoParser.BlockContext,0)


        def LOOP(self):
            return self.getToken(ArArduinoParser.LOOP, 0)

        def ID(self):
            return self.getToken(ArArduinoParser.ID, 0)

        def type_(self):
            return self.getTypedRuleContext(ArArduinoParser.TypeContext,0)


        def params(self):
            return self.getTypedRuleContext(ArArduinoParser.ParamsContext,0)


        def getRuleIndex(self):
            return ArArduinoParser.RULE_funcBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncBody" ):
                listener.enterFuncBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncBody" ):
                listener.exitFuncBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncBody" ):
                return visitor.visitFuncBody(self)
            else:
                return visitor.visitChildren(self)




    def funcBody(self):

        localctx = ArArduinoParser.FuncBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcBody)
        self._la = 0 # Token type
        try:
            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.match(ArArduinoParser.SETUP)
                self.state = 82
                self.match(ArArduinoParser.LPAREN)
                self.state = 83
                self.match(ArArduinoParser.RPAREN)
                self.state = 84
                self.match(ArArduinoParser.COLON)
                self.state = 85
                self.match(ArArduinoParser.VOID)
                self.state = 86
                self.block()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.match(ArArduinoParser.LOOP)
                self.state = 88
                self.match(ArArduinoParser.LPAREN)
                self.state = 89
                self.match(ArArduinoParser.RPAREN)
                self.state = 90
                self.match(ArArduinoParser.COLON)
                self.state = 91
                self.match(ArArduinoParser.VOID)
                self.state = 92
                self.block()
                pass
            elif token in [54]:
                self.enterOuterAlt(localctx, 3)
                self.state = 93
                self.match(ArArduinoParser.ID)
                self.state = 94
                self.match(ArArduinoParser.LPAREN)
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==54:
                    self.state = 95
                    self.params()


                self.state = 98
                self.match(ArArduinoParser.RPAREN)
                self.state = 99
                self.match(ArArduinoParser.COLON)
                self.state = 100
                self.type_()
                self.state = 101
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArArduinoParser.ParamContext)
            else:
                return self.getTypedRuleContext(ArArduinoParser.ParamContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(ArArduinoParser.COMA)
            else:
                return self.getToken(ArArduinoParser.COMA, i)

        def getRuleIndex(self):
            return ArArduinoParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = ArArduinoParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.param()
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==44:
                self.state = 106
                self.match(ArArduinoParser.COMA)
                self.state = 107
                self.param()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ArArduinoParser.ID, 0)

        def COLON(self):
            return self.getToken(ArArduinoParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(ArArduinoParser.TypeContext,0)


        def getRuleIndex(self):
            return ArArduinoParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = ArArduinoParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(ArArduinoParser.ID)
            self.state = 114
            self.match(ArArduinoParser.COLON)
            self.state = 115
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(ArArduinoParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(ArArduinoParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArArduinoParser.StatementContext)
            else:
                return self.getTypedRuleContext(ArArduinoParser.StatementContext,i)


        def getRuleIndex(self):
            return ArArduinoParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = ArArduinoParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(ArArduinoParser.LBRACE)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 18024294114134038) != 0):
                self.state = 118
                self.statement()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 124
            self.match(ArArduinoParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(ArArduinoParser.VarDeclContext,0)


        def idStatement(self):
            return self.getTypedRuleContext(ArArduinoParser.IdStatementContext,0)


        def SEMI(self):
            return self.getToken(ArArduinoParser.SEMI, 0)

        def ifStat(self):
            return self.getTypedRuleContext(ArArduinoParser.IfStatContext,0)


        def whileStat(self):
            return self.getTypedRuleContext(ArArduinoParser.WhileStatContext,0)


        def returnStat(self):
            return self.getTypedRuleContext(ArArduinoParser.ReturnStatContext,0)


        def block(self):
            return self.getTypedRuleContext(ArArduinoParser.BlockContext,0)


        def getRuleIndex(self):
            return ArArduinoParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ArArduinoParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.varDecl()
                pass
            elif token in [54]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.idStatement()
                self.state = 128
                self.match(ArArduinoParser.SEMI)
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 3)
                self.state = 130
                self.ifStat()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 131
                self.whileStat()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 5)
                self.state = 132
                self.returnStat()
                self.state = 133
                self.match(ArArduinoParser.SEMI)
                pass
            elif token in [40]:
                self.enterOuterAlt(localctx, 6)
                self.state = 135
                self.block()
                pass
            elif token in [43]:
                self.enterOuterAlt(localctx, 7)
                self.state = 136
                self.match(ArArduinoParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ArArduinoParser.ID, 0)

        def idSuffix(self):
            return self.getTypedRuleContext(ArArduinoParser.IdSuffixContext,0)


        def getRuleIndex(self):
            return ArArduinoParser.RULE_idStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdStatement" ):
                listener.enterIdStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdStatement" ):
                listener.exitIdStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdStatement" ):
                return visitor.visitIdStatement(self)
            else:
                return visitor.visitChildren(self)




    def idStatement(self):

        localctx = ArArduinoParser.IdStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_idStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(ArArduinoParser.ID)
            self.state = 140
            self.idSuffix()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdSuffixContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(ArArduinoParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(ArArduinoParser.ExpressionContext,0)


        def ADD_ASSIGN(self):
            return self.getToken(ArArduinoParser.ADD_ASSIGN, 0)

        def SUB_ASSIGN(self):
            return self.getToken(ArArduinoParser.SUB_ASSIGN, 0)

        def INC(self):
            return self.getToken(ArArduinoParser.INC, 0)

        def DEC(self):
            return self.getToken(ArArduinoParser.DEC, 0)

        def LPAREN(self):
            return self.getToken(ArArduinoParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ArArduinoParser.RPAREN, 0)

        def args(self):
            return self.getTypedRuleContext(ArArduinoParser.ArgsContext,0)


        def getRuleIndex(self):
            return ArArduinoParser.RULE_idSuffix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdSuffix" ):
                listener.enterIdSuffix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdSuffix" ):
                listener.exitIdSuffix(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdSuffix" ):
                return visitor.visitIdSuffix(self)
            else:
                return visitor.visitChildren(self)




    def idSuffix(self):

        localctx = ArArduinoParser.IdSuffixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_idSuffix)
        self._la = 0 # Token type
        try:
            self.state = 152
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.match(ArArduinoParser.ASSIGN)
                self.state = 143
                self.expression()
                pass
            elif token in [26, 27]:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                _la = self._input.LA(1)
                if not(_la==26 or _la==27):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 145
                self.expression()
                pass
            elif token in [24, 25]:
                self.enterOuterAlt(localctx, 3)
                self.state = 146
                _la = self._input.LA(1)
                if not(_la==24 or _la==25):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 4)
                self.state = 147
                self.match(ArArduinoParser.LPAREN)
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 34058884500947040) != 0):
                    self.state = 148
                    self.args()


                self.state = 151
                self.match(ArArduinoParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(ArArduinoParser.IF, 0)

        def LPAREN(self):
            return self.getToken(ArArduinoParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(ArArduinoParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(ArArduinoParser.RPAREN, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArArduinoParser.BlockContext)
            else:
                return self.getTypedRuleContext(ArArduinoParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(ArArduinoParser.ELSE, 0)

        def getRuleIndex(self):
            return ArArduinoParser.RULE_ifStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStat" ):
                listener.enterIfStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStat" ):
                listener.exitIfStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStat" ):
                return visitor.visitIfStat(self)
            else:
                return visitor.visitChildren(self)




    def ifStat(self):
